src/objects/Mana_Food_Consumption_Record__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <formula>TEXT(Food__r.Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <formula>IF(OR(ISBLANK(Quantity_Code__c),ISNULL(Quantity_Code__c)),&quot;&quot;,TEXT(Quantity_Code__r.Code__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Date__c</fullName>
        <label>Collection Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Food__c</fullName>
        <label>Food</label>
        <referenceTo>Mana_Food__c</referenceTo>
        <relationshipLabel>Food Consumption Records</relationshipLabel>
        <relationshipName>Food_Consumption_Records</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <label>Household</label>
        <referenceTo>Mana_Household__c</referenceTo>
        <relationshipLabel>Food Consumption Records</relationshipLabel>
        <relationshipName>Food_Consumption_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_Consumed__c</fullName>
        <label>Number Consumed</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quantity Code</label>
        <referenceTo>Mana_Food_Quantity_Code__c</referenceTo>
        <relationshipLabel>Food Consumption Records</relationshipLabel>
        <relationshipName>Food_Consumption_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Barter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (gift-donation)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>Mana_Food_Consumption_Submission__c</referenceTo>
        <relationshipLabel>Food Consumption Records</relationshipLabel>
        <relationshipName>Food_Consumption_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Quantity_Consumed__c</fullName>
        <formula>IF(OR(ISBLANK(Quantity_Code__c),ISNULL(Quantity_Code__c)), Number_Consumed__c ,  Number_Consumed__c * Unit_Quantity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Quantity Consumed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Quantity__c</fullName>
        <formula>IF(OR(ISBLANK(Quantity_Code__c),ISNULL(Quantity_Code__c)),0,Quantity_Code__r.Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <formula>TEXT(Food__r.Units__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Units</label>
        <type>Text</type>
    </fields>
    <label>Mana Food Consumption Record</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mana Food Consumption Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Food_Must_Match</fullName>
        <active>true</active>
        <description>This rule checks that the code belongs to the same food that&apos;s mapped to this column. Either Quantity_Code__c is blank or null, OR it must be equal to a code from the same food type.</description>
        <errorConditionFormula>AND(NOT(OR(ISBLANK(Quantity_Code__c),ISNULL(Quantity_Code__c))), (Food__c  &lt;&gt;  Quantity_Code__r.Food__c))</errorConditionFormula>
        <errorDisplayField>Quantity_Code__c</errorDisplayField>
        <errorMessage>The Quantity Code selected must belong to the same Food tied to this record.</errorMessage>
    </validationRules>
</CustomObject>